[package]
name = "solana-vesting"
version = "0.1.0"
description = "Solana Vesting SC"
authors = ["SteMak <chestedos@gmail.com>", "Erengonen <erengn53@gmail.com>"]
repository = "https://github.com/SteMak/solana_vesting"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.10.3"
solana-program = "1.18.17"
spl-token = "4.0.0"

[dev-dependencies]
solana-program-test = "1.18.17"
solana-sdk = "1.18.17"

[lib]
crate-type = ["cdylib", "lib"]
